# fps-duck

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
data/: world.txt
data/gun/: gun.mtl
data/shaders/: fragment.glsl  skybox_frag.glsl  skybox_vert.glsl  vertex.glsl
include/: Core.hpp  World.hpp
include/ecs/: Bullet.hpp  BulletSystem.hpp  Camera.hpp  CameraSystem.hpp  Collider.hpp  CollisionSystem.hpp  Component.hpp  Entity.hpp  FirstPerson.hpp  FirstPersonSystem.hpp  Light.hpp  LightSystem.hpp  Mesh.hpp  Model.hpp  MovementSystem.hpp  Player.hpp  PlayerSystem.hpp  Registry.hpp  RenderSystem.hpp  Shader.hpp  SkyboxSystem.hpp  System.hpp  Texture.hpp  Transform.hpp  Velocity.hpp  WorldRepeater.hpp
include/renderer/: Renderer.hpp  Window.hpp
src/: World.cpp  main.cpp
src/ecs/: BulletSystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  FirstPersonSystem.cpp  LightSystem.cpp  Model.cpp  MovementSystem.cpp  PlayerSystem.cpp  RenderSystem.cpp  Shader.cpp  SkyboxSystem.cpp  Texture.cpp  WorldRepeater.cpp
src/renderer/: Renderer.cpp  Window.cpp
